lesson22-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lesson22-app
  labels:
    app: lesson22-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lesson22-app
  template:
    metadata:
      labels:
        app: lesson22-app
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:1.26
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
