lesson22-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lesson22-service
  labels:
    app: lesson22-app
spec:
  selector:
    app: lesson22-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
